2003-12-01  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/FamilyView.py (add_child_clicked): Call self.no_name() 
	when the surname guessing is set to "None" (otherwise it produced 
	traceback and did nothing).
	* doc/gramps-manual/C/custom.xml: Update.
	* doc/gramps-manual/C/gramps-manual-C.omf: Update.
	* doc/gramps.1.in: Update.

2003-12-01  Tim Waugh  <twaugh@redhat.com>
	* doc/xmldocs.make: Fix builds for $top_srcdir == $top_builddir (oops).

2003-12-01  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/C/keybind.xml: Update.
	* doc/gramps-manual/C/usage.xml: Update.
	* doc/gramps-manual/C/custom.xml: Update.
	* NEWS: typo.

2003-12-01  Tim Waugh  <twaugh@redhat.com>
	* doc/xmldocs.make: Clean copied XML files.  Now 'make distcheck' works
	again.

2003-11-30  Alex Roitman  <shura@alex.neuro.umn.edu>
	* NEWS: Update.
	* src/FamilyView.py (on_child_list_button_press): Add edit person
	callback on Shift+click; (sp_key_press, child_key_press): Replace 
	Ctrl+Insert with Shift+Insert for adding new people.
	* src/PedView.py (on_show_child_menu): Markup children with children.
	* doc/gramps-manual/C/faq.xml: Update.
	* doc/gramps-manual/C/keybind.xml: Update.
	* doc/gramps-manual/C/filtref.xml: Update.

2003-11-29  Don Allingham  <dallingham@users.sourceforge.net>
	* src/PedView.py (PedigreeView.find_children): used italics instead of
	'*' to indicate children in popup menu
	* src/docgen/OpenOfficeDoc.py (OpenOfficeDoc.close): replace hardcoded
	"oowriter" with the command found by querying the mime database with
	the open office document type. Different distributions seem to install
	OOo with different names (oofice, oowriter, soffice).

2003-11-29  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/filters/MatchSndEx2.py: Typo.
	* src/plugins/RelGraph.py: Typo.
	* src/plugins/book.glade: Remove initial text from the labels. 
	* src/po/template.po: Updated translation template for 0.98.0.
	* src/po/ru.po: Russian translation for 0.98.0.