@@ -18,6 +18,8 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+# $Id$
+
 "Export to CD (nautilus)"
 
 #-------------------------------------------------------------------------
@@ -36,6 +38,7 @@ from cStringIO import StringIO
 #-------------------------------------------------------------------------
 import gtk
 import gtk.glade
+import gnome
 import gnome.vfs
 
 #-------------------------------------------------------------------------
@@ -86,7 +89,8 @@ class PackageWriter:
         
             dic = {
                 "destroy_passed_object" : Utils.destroy_passed_object,
-                "on_ok_clicked" : self.on_ok_clicked
+                "on_ok_clicked" : self.on_ok_clicked,
+                "on_help_clicked" : self.on_help_clicked
                 }
         
             self.top = gtk.glade.XML(glade_file,"packageExport","gramps")
@@ -153,6 +157,10 @@ class PackageWriter:
         gfile = WriteXML.XmlWriter(self.db,None,1)
         gfile.write_handle(g)
         g.close()
+
+    def on_help_clicked(self,obj):
+        """Display the relevant portion of GRAMPS manual"""
+        gnome.help_display('gramps-manual','export-data')
 
     def on_ok_clicked(self,obj):
         Utils.destroy_passed_object(obj)
