@@ -1,7 +1,7 @@
 #
 # Gramps - a GTK+/GNOME based genealogy program
 #
-# Copyright (C) 2000  Donald N. Allingham
+# Copyright (C) 2000-2003  Donald N. Allingham
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,6 +17,8 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
+
+# $Id$
 
 "Export to GRAMPS package"
 
@@ -36,6 +38,7 @@ from cStringIO import StringIO
 #-------------------------------------------------------------------------
 import gtk
 import gtk.glade
+import gnome
 
 #-------------------------------------------------------------------------
 #
@@ -78,7 +81,8 @@ class PackageWriter:
         
         dic = {
             "destroy_passed_object" : Utils.destroy_passed_object,
-            "on_ok_clicked" : self.on_ok_clicked
+            "on_ok_clicked" : self.on_ok_clicked,
+            "on_help_clicked" : self.on_help_clicked
             }
         
         self.top = gtk.glade.XML(glade_file,"packageExport","gramps")
@@ -94,6 +98,10 @@ class PackageWriter:
         name = self.top.get_widget("filename").get_text()
         Utils.destroy_passed_object(obj)
         self.export(name)
+
+    def on_help_clicked(self,obj):
+        """Display the relevant portion of GRAMPS manual"""
+        gnome.help_display('gramps-manual','export-data')
 
     def export(self, filename):
         #--------------------------------------------------------------
