@@ -52,6 +52,19 @@
 	      <signal name="clicked" handler="on_ok_button1_clicked" object="dbopen"/>
 	    </widget>
 	  </child>
+
+	  <child>
+	    <widget class="GtkButton" id="button136">
+	      <property name="visible">True</property>
+	      <property name="can_default">True</property>
+	      <property name="can_focus">True</property>
+	      <property name="label">gtk-help</property>
+	      <property name="use_stock">True</property>
+	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="response_id">-11</property>
+	      <signal name="clicked" handler="on_help_dbopen_clicked" last_modification_time="Tue, 02 Dec 2003 01:34:45 GMT"/>
+	    </widget>
+	  </child>
 	</widget>
 	<packing>
 	  <property name="padding">0</property>
